# haskell-from-first-principles

./: .gitignore  LICENSE  Readme.md  Reamd.md  haskell-ffp.cabal
10-fold/: database-processing.hs  exercises.hs  scans.hs  warm-up.hs
11-algabraic-data-types/: as-patterns.hs  binary-trees.hs  cardinality.hs  exercises.hs  huttons-razor.hs  newtype.hs  normal-form.hs  phone-exercise.hs  rule-the-types.hs  vehicles.hs  vigenere-ciper.hs
12-signaling-adversity/: exercises.hs
13-building-projects/: palindrome.hs  personCreator.hs  questions.txt
13-building-projects/hangman/: hangman.cabal
13-building-projects/hangman/src/: Main.hs
13-building-projects/hello/: hello.cabal
13-building-projects/hello/exe/: Main.hs
13-building-projects/hello/src/: DogsRule.hs
14-testing/: Trivial.hs
14-testing/addition/: Addition.hs  addition.cabal
14-testing/morse/: morse.cabal
14-testing/morse/src/: Main.hs  Morse.hs
14-testing/morse/tests/: tests.hs
14-testing/simple-tests/: simple-tests.cabal
14-testing/simple-tests/src/: Arithmetic.hs
14-testing/simple-tests/tests/: Spec.hs  WordNumberTest.hs
15-monoid-semigroup/monoid-semigroup/: monoid-semigroup.cabal
15-monoid-semigroup/monoid-semigroup/app/: MadLib.hs
15-monoid-semigroup/monoid-semigroup/src/: Monoids.hs  SemiGroups.hs
15-monoid-semigroup/monoid-semigroup/test/: Spec.hs
16-functor/: Exercises.hs  FunctorLaws.hs  HeavyLifting.hs  Possibly.hs  functor-type-substitution.txt  kindedness.txt
17-applicative/: Instances.hs  Lookups.hs  StopVowelStop.hs
17-applicative/CheckersExperiment/: CheckersExperiment.cabal  README.md
17-applicative/CheckersExperiment/app/: Main.hs
17-applicative/CheckersExperiment/src/: Lib.hs
17-applicative/CheckersExperiment/test/: Spec.hs
18-monad/: Bind.hs  TwiceEven.hs
18-monad/MonadLaws/: MonadLaws.cabal  README.md
18-monad/MonadLaws/app/: Main.hs
18-monad/MonadLaws/src/: List.hs  MiscFunctions.hs  Nope.hs  PhhhbbtttEither.hs  Sum.hs
18-monad/MonadLaws/test/: Spec.hs
19-applications/UrlShortener/: UrlShortener.cabal
19-applications/UrlShortener/app/: Main.hs
20-foldable/: Instances.hs  LibraryFunctions.hs
21-traversable/HttpRequests/: HttpRequests.cabal  README.md
21-traversable/HttpRequests/app/: Main.hs
21-traversable/Instances/: Instances.cabal  Spec.hs
22-reader/: Reader.cabal
22-reader/UrlShortenerReaderT/: LICENSE  UrlShortener.cabal
22-reader/UrlShortenerReaderT/app/: Main.hs  ReaderTBasic.hs  ReaderTwo.hs
22-reader/src/: Ask.hs  ReaderPractice.hs  WarmingUp.hs
23-state/: State.cabal
23-state/src/: DiceRoller.hs  FizzBlood.hs  Moi.hs
23-state/test/: Spec.hs
24-parser-combinators/: Exercises.hs  Fractions.hs  Ipv4.hs  Ipv6.hs  SemVerParse.hs
24-parser-combinators/iniparse/: iniparse.cabal
24-parser-combinators/iniparse/src/: Main.hs
25-composing-types/: Bifunctor.hs  Compose.hs
3/: greet.hs  print-broken.hs  string-manipulation.hs  test.hs
4-basic-datatypes/: excercises.hs
5-types/: arith3broken.hs  determine-the-type.hs  does-it-compile.hs  given-type-write-function.hs  multiple-choice.hs  sing.hs  specific-type-signature.hs  type-kwon-do.hs  type-signature-matchup.hs  type-varialbe-or-constructor.hs  write-a-signature.hs
6-typeclasses/: does-it-typecheck-2.hs  does-it-typecheck.hs  eq-instances.hs  match-the-types.hs  multiple-choice.hs  type-kwon-do.hs
7-more-functions/: arith.hs  artful-doggy.hs  binding.hs  composition-into.hs  data-sum-and-product-types.hs  exercises.hs  grab-bag.hs  guards.hs  higher-order-functions-intro.hs  multiple-choice-exercises.txt  pattern-matching.hs  show-read.hs  variety-pack.hs
8-recursion/: WordNumber.hs  exercises.hs  multiple-choice-exercises.txt  recursion-intro.hs
9-lists/: Ciphers.hs  PoemLines.hs  exercises.hs  list-comprehensions.hs  my-funcs.hs  safe-head.hs
