name: haskell-ffp
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: Dean Merchant
maintainer: deanmerchant@gmail.com
build-type: Simple
cabal-version: >=1.10
executable haskell-ffp
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
  hs-source-dirs:      src
  default-language:    Haskell2010
