name:                hangman
version:             0.1.0.0
synopsis: Playing Hangman
license:             BSD3
license-file:        LICENSE
author:              Dean Merchant
maintainer:          deanmerchant@gmail.com
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split 

