name:                hello
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/bitemyapp/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Your Name Here
maintainer:          example@email.com
copyright:           2016, Your Name Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hello
  build-depends:       base >= 4.7 && < 5, hello
  default-language:    Haskell2010
  exposed-modules:     DogsRules, Hello
  hs-source-dirs:      exe
  main-is:             Main.hs

library
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  exposed-modules: DogsRule, Hello
  hs-source-dirs: src
