name:                simple-tests
version:             0.1.0.0
homepage:            https://github.com/githubuser/simple-tests#readme
license:             BSD3
license-file:        LICENSE
author:              Dean Merchant
maintainer:          deanmerchant@gmail.com
copyright:           2017 Dean Merchant
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arithmetic
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  build-depends:       base
                     , hspec  >= 2.4 && < 2.5
                     , QuickCheck
                     , simple-tests
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
