name:                Instances
version:             0.1.0.0
homepage:            https://github.com/Dean177/Instances#readme
author:              Dean Merchant
maintainer:          deanmerchant@gmail.com
copyright:           2017 Dean Merchant
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable Instances-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

test-suite Instances-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      .
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Dean177/Instances
