name:                iniparse
version:             0.1.0.0
homepage:            https://github.com/Dean177/iniparse#readme
license:             BSD3
license-file:        LICENSE
author:              Dean Merchant
maintainer:          deanmerchant@gmail.com
copyright:           2017 Dean Merchant
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable iniparse
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , hspec
                     , raw-strings-qq
                     , parsers
                     , text
                     , trifecta
